# kate-uniteai

./: README.md
kde/applications/kate/addons/: CMakeLists.txt
kde/applications/kate/addons/uniteai/: CMakeLists.txt  Messages.sh  aiconfigwidget.ui  lspclientprotocol.h  plugin.qrc  ui.rc  uniteaiconfigpage.cpp  uniteaiconfigpage.h  uniteaiplugin.cpp  uniteaiplugin.h  uniteaiplugin.json  uniteaipluginview.cpp  uniteaipluginview.h
kde/applications/kate/addons/uniteai/tests/: CMakeLists.txt
